--- a/style.scss
+++ b/style.scss
@@ -164,7 +164,7 @@ img {
 }
 
 .site-avatar {
-  float: left;
+  float: none;
   width: 70px;
   height: 70px;
   margin-right: 15px;
@@ -197,15 +197,16 @@ img {
   font-family: Georgia,Times,Times New Roman,serif;
   font-weight: 300;
   font-size: 28px;
+  letter-spacing: 0.1px;
 }
 
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
-  font-size: 16px;
+  font-size: 0px;
 
   @include mobile {
-    margin: 3px 0;
+    margin: 0px 0;
   }
 }
 
