--- a/style.scss
+++ b/style.scss
@@ -165,6 +165,7 @@ img {
 
 .site-avatar {
   float: none;
+  display:block;
   width: 70px;
   height: 70px;
   margin-right: 15px;
@@ -195,8 +196,8 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: Georgia,Times,Times New Roman,serif;
-  font-weight: 300;
-  font-size: 28px;
+  font-weight: 500;
+  font-size: 24px;
   letter-spacing: 0.1px;
 }
 
