--- a/style.scss
+++ b/style.scss
@@ -163,23 +163,23 @@ img {
   }
 }
 
-.site-avatar {
-  float: none;
-  display:block;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
+#.site-avatar {
+#  float: none;
+#  display:block;
+# width: 70px;
+#  height: 70px;
+#  margin-right: 15px;
+#
+#  @include mobile {
+#    float: none;
+#    display: block;
+#    margin: 0 auto;
+#  }
+#
+#  img {
+#    border-radius: 5px;
+#  }
+#}
 
 .site-info {
   float: left;
