--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 Georgia,Times,Times New Roman,serif;
+  font: 18px/1.4 $georgia;
   color: $darkGray;
 }
 
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Georgia,Times,Times New Roman,serif;
+  font-family: $georgia;
   color: $darkerGray;
   font-weight: bold;
 
@@ -195,7 +195,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: Georgia,Times,Times New Roman,serif;
+  font-family: $georgia;
   font-weight: 500;
   font-size: 24px;
   letter-spacing: 0.1px;
@@ -214,7 +214,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: Georgia,Times,Times New Roman,serif;
+  font-family: $georgia;
   font-size: 18px;
 
   @include mobile {
