--- a/style.scss
+++ b/style.scss
@@ -243,12 +243,12 @@ nav {
 //
 
 .posts > .post {
-  padding-bottom: 2em;
+  #padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
 }
 
 .posts > .post:last-child {
-  padding-bottom: 1em;
+  #padding-bottom: 1em;
   border-bottom: none;
 }
 
