--- a/style.scss
+++ b/style.scss
@@ -151,11 +151,11 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .masthead {
-  padding: 20px 0;
+  padding: 0px 0;
   border-bottom: 1px solid $lightGray;
 
   @include mobile {
@@ -215,7 +215,7 @@ nav {
   float: right;
   margin-top: 3px; // @TODO: Vertically middle align
   font-family: $georgia;
-  font-size: 18px;
+  font-size: 5px; //18px
 
   @include mobile {
     float: none;
