--- a/style.scss
+++ b/style.scss
@@ -151,7 +151,7 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 .masthead {
@@ -166,9 +166,9 @@ img {
 .site-avatar {
   float: none;
   display:block;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
+  width: 0px;
+  height: 0px;
+  margin-right: 0px;
 
   @include mobile {
     float: none;
@@ -177,7 +177,7 @@ img {
   }
 
   img {
-    border-radius: 5px;
+    border-radius: 0px;
   }
 }
 
@@ -213,7 +213,7 @@ img {
 
 nav {
   float: right;
-  margin-top: 3px; // @TODO: Vertically middle align
+  margin-top: 0px; // @TODO: Vertically middle align
   font-family: $georgia;
   font-size: 5px; //18px
 
@@ -229,7 +229,7 @@ nav {
     color: $darkGray;
     text-align: right;
     font-weight: 300;
-    letter-spacing: 1px;
+    letter-spacing: 0.1px;
 
     @include mobile {
       margin: 0 10px;
@@ -243,7 +243,7 @@ nav {
 //
 
 .posts > .post {
-  #padding-bottom: 2em;
+  padding-bottom: 20em; //2em
   border-bottom: 1px solid $lightGray;
 }
 
