--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 $georgia;
+  font: 14px/1.4 $georgia;
   color: $darkGray;
 }
 
@@ -38,6 +38,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.7;
   margin: 1em 0 15px;
   padding: 0;
+  letter-spacing: 0.1;
 
   @include mobile {
     line-height: 1.4;
@@ -196,7 +197,7 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: $georgia;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 24px;
   letter-spacing: 0.1px;
 }
@@ -229,7 +230,7 @@ nav {
     color: $darkGray;
     text-align: right;
     font-weight: 300;
-    letter-spacing: 0.1px;
+    letter-spacing: 1px;
 
     @include mobile {
       margin: 0 10px;
@@ -243,7 +244,7 @@ nav {
 //
 
 .posts > .post {
-  padding-bottom: 20em; //2em
+  padding-bottom: 2em; //2em
   border-bottom: 1px solid $lightGray;
 }
 
