--- a/style.scss
+++ b/style.scss
@@ -28,12 +28,14 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $georgia;
   color: $darkerGray;
-  font-weight: 900;
+  font-weight: 700;
 
   line-height: 1.7;
   margin: 1em 0 15px;
@@ -197,7 +199,7 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: $georgia;
-  font-weight: 900;
+  font-weight: 700;
   font-size: 24px;
   letter-spacing: 0.1px;
 }
@@ -214,13 +216,13 @@ img {
 
 nav {
   float: right;
-  margin-top: 10px; // @TODO: Vertically middle align
+  margin-top: 18px; // @TODO: Vertically middle align
   font-family: $georgia;
   font-size: 18px; 
 
   @include mobile {
     float: none;
-    margin-top: 2px;
+    margin-top: 10px;
     display: block;
     font-size: 16px;
   }
