--- a/style.scss
+++ b/style.scss
@@ -50,7 +50,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 24px;
   a {
-    color: inherit;
+    color: #cc0000;
   }
 }
 
@@ -229,7 +229,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: #cc0000; //#$darkGray;
+    color: $darkGray;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
