--- a/style.scss
+++ b/style.scss
@@ -204,6 +204,10 @@ img {
   letter-spacing: 0.1px;
 }
 
+a.site-name{
+  color: $darkGray;
+}
+
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
